--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
      <head>
-        <script src="app.js"></script>
+        <!-- <script src="app.js"></script> -->
+        <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
      </head>
 
-  <body>
 
-  </body>
+     <body>
+
+     </body>
 </html>
