--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
      <head>
         <!-- <script src="app.js"></script> -->
-        <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
+        <script src="game.js"></script>
+        <!-- <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script> -->
      </head>
 
 
